fixing the post icon position mobile

--- a/app/styles/v2/Vivanuncios/partials/components/welcomeModal/_welcomeModal.scss
+++ b/app/styles/v2/Vivanuncios/partials/components/welcomeModal/_welcomeModal.scss
@@ -71,6 +71,7 @@
          @include vivaBtn(off, 0.35em, off);
          > span + span.btn-icon {
          display:inline-block;
+         vertical-align: top;
          }
       }
      }
